--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-# Include your project-specific ignores in this file
-# Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
-
+# Project dependencies
+# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+node_modules
+.cache/
+# Build directory
+public/
 .DS_Store
-node_modules/
+yarn-error.log
+#image assets
+#src/img
