--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gatsby": "^1.9.115",
     "gatsby-link": "^1.6.28",
+    "gatsby-plugin-google-analytics": "^1.0.13",
     "gatsby-plugin-postcss-sass": "^1.0.13",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sass": "^1.0.13",
