--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-remark-copy-linked-files": "^1.5.22",
     "gatsby-remark-images": "^1.5.33",
     "gatsby-source-filesystem": "^1.5.9",
+    "gatsby-transformer-json": "^1.0.13",
     "gatsby-transformer-remark": "^1.7.23",
     "gatsby-transformer-sharp": "^1.6.15",
     "prop-types": "^15.6.0",
