name change updates

--- a/package.json
+++ b/package.json
@@ -1,36 +1,38 @@
 {
   "name": "jtr-webzone",
-  "description": "JTR Personal Website",
+  "description": "NTR Personal Website",
   "version": "1.0.0",
   "author": "JTR <riddick.taylor@gmail.com>",
   "devDependencies": {
-    "gatsby": "^1.9.115",
-    "gatsby-image": "^1.0.28",
-    "gatsby-link": "^1.6.28",
-    "gatsby-plugin-glamor": "^1.6.10",
-    "gatsby-plugin-google-analytics": "^1.0.13",
-    "gatsby-plugin-postcss-sass": "^1.0.13",
+    "gatsby": "^1.9.279",
+    "gatsby-image": "^1.0.55",
+    "gatsby-link": "^1.6.46",
+    "gatsby-plugin-glamor": "^1.6.13",
+    "gatsby-plugin-google-analytics": "^1.0.31",
+    "gatsby-plugin-postcss-sass": "^1.0.22",
     "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-sass": "^1.0.13",
-    "gatsby-plugin-typography": "^1.7.10",
-    "gatsby-remark-copy-linked-files": "^1.5.22",
-    "gatsby-remark-images": "^1.5.33",
-    "gatsby-source-filesystem": "^1.5.9",
-    "gatsby-transformer-json": "^1.0.13",
-    "gatsby-transformer-remark": "^1.7.23",
-    "gatsby-transformer-sharp": "^1.6.15",
-    "glamorous": "^4.11.0",
-    "prop-types": "^15.6.0",
+    "gatsby-plugin-sass": "^1.0.26",
+    "gatsby-plugin-typography": "^1.7.19",
+    "gatsby-remark-copy-linked-files": "^1.5.37",
+    "gatsby-remark-images": "^1.5.67",
+    "gatsby-source-filesystem": "^1.5.39",
+    "gatsby-transformer-json": "^1.0.20",
+    "gatsby-transformer-remark": "^1.7.44",
+    "gatsby-transformer-sharp": "^1.6.27",
+    "gh-pages": "^1.2.0",
+    "glamorous": "^4.13.1",
+    "prettier": "^1.14.3",
+    "prop-types": "^15.6.2",
     "react-fontawesome": "^1.6.1",
-    "react-modal": "^3.1.7",
-    "react-scrollchor": "^4.0.0",
-    "typography-theme-kirkham": "^0.16.3",
-    "gh-pages": "^1.0.0",
-    "prettier": "^1.8.2"
+    "react-modal": "^3.6.1",
+    "react-scrollchor": "^4.2.1",
+    "typography-theme-kirkham": "^0.16.3"
   },
   "homepage": "http://jtriddick.com",
   "keywords": [
-    "gatsby","riddick","jtr"
+    "gatsby",
+    "riddick",
+    "ntr"
   ],
   "license": "MIT",
   "main": "n/a",
@@ -44,5 +46,8 @@
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "update": "^0.7.4"
   }
 }
